--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,8 @@
 <p style="color: green"><%= notice %></p>
-
+<%="hello I am create flash #{flash[:temp]}"%>
+<%=flash.now[:error] = "I am in the now notice"%>
 <%= render @post %>
-
+<%=params[:locale]%>
 <div>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
